unpackaged/main/default/objects/ZuoraRestIntegration__c/ZuoraRestIntegration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Zuora Rest Integration</label>
</CustomObject>