unpackaged/main/default/objects/ZuoraRestIntegration__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This facility is just to on and Off the custom setting with just one click</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>