unpackaged/main/default/objects/ZuoraRestIntegration__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>This is Zuora Integeration Api User Password</description>
    <label>Password</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>