unpackaged/main/default/objects/ZuoraRestIntegration__c/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <description>This is Zuora Integration Api User</description>
    <label>UserName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>