unpackaged/main/default/objects/ZuoraRestIntegration__c/fields/ZuoraEntityId__c.field-meta.xml
<CustomField>
    <fullName>ZuoraEntityId__c</fullName>
    <label>Zuora Entity Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>