unpackaged/main/default/objects/ZuoraRestIntegration__c/fields/ZuoraEntityName__c.field-meta.xml
<CustomField>
    <fullName>ZuoraEntityName__c</fullName>
    <label>Zuora Entity Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>