unpackaged/main/default/objects/ZuoraRestIntegration__c/fields/ZuoraRestEndPoint__c.field-meta.xml
<CustomField>
    <fullName>ZuoraRestEndPoint__c</fullName>
    <description>This is the end point which we need to hit to make changes</description>
    <label>ZuoraRestEndPoint</label>
    <required>true</required>
    <type>Url</type>
</CustomField>