unpackaged/main/default/objects/ZuoraRestIntegration__c/fields/ZuoraSOAPEndPoint__c.field-meta.xml
<CustomField>
    <fullName>ZuoraSOAPEndPoint__c</fullName>
    <description>endpoint for soap resource</description>
    <label>ZuoraSOAPEndPoint</label>
    <type>Url</type>
</CustomField>